Added to getPost

--- a/force-app/main/default/classes/JSONPlaceholderExercise.cls
+++ b/force-app/main/default/classes/JSONPlaceholderExercise.cls
@@ -11,6 +11,7 @@ public class JSONPlaceholderExercise {
         // TODO: Student Implementation
         Http http = new Http();
         HttpRequest request = new HttpRequest();
+        request.setEndpoint(BASE_URL + '/posts/' + postId);
         // 1. Create a new HTTP request
         // 2. Set the endpoint URL using BASE_URL + '/posts/' + postId
         // 3. Set the HTTP method to 'GET'
